@@ -620,9 +620,6 @@ qreal QWebView::textSizeMultiplier() const
 
     QPainter::TextAntialiasing and QPainter::SmoothPixmapTransform are enabled by default.
 
-    \note This property is not available on Symbian. However, the getter and
-    setter functions can still be used directly.
-
     \sa QPainter::renderHints()
 */
 
